
2009-08-29
if, if/else, return command in Parser w/Tests
foreach, while commands in Parser w/Tests
{ } Composite command in Parser w/Tests
function parsing
InvokeCommand
DefineFunctionCommand
PrintSubroutine
PrintLineSubroutine
AjSharp.Console

2009-08-30
DotExpression, NewExpression w/tests
TypeUtilities w/tests
dot expression support in Parser
Machine.Environment, Machine.Current w/tests
IObject, DynamicObject first version w/tests
PrimitiveTests
Move ICallable from AjLanguage.Commands to AjLanguage.Language
new support in Parser w/tests
ObjectUtilities w/tests
TypeUtilities.GetValue w/tests
FunctionExpression
SetCommand, ExpressionCommand
function expression in Parser
AjSharp.Primitives.IncludeSubroutine w/tests
EvaluationTests
Examples/SetNumbers.ajs
Examples/Factorial.ajs
Examples/Apply.ajs

2009-09-06
MultipleSetExpression w/test

2009-09-12
Support for new ... { prop = expr, ... } in Parser
Support for new { prop = expr, ... } as a DynamicObject
Invoke in IObject, DynamicObject
Refactoring BindingEnvironment to IBindingEnvironment
ObjectEnvironment w/tests
ObjectUtilites.IsNumber
concatenate using +
IClass
IClassicObject
DynamicClass w/tests
DynamicClassicObject
DefineClassCommand w/test
class Foo { ... } in parser and evaluation w/tests
new Foo() in evaluation w/tests
new { } in parser and evaluation w/tests

2009-09-13
IncrementOperator
IncrementExpression w/tests
ExpressionUtilities
Refactoring SetCommand to use ExpressionUtilities.SetValue

2009-09-19
Creation of List when obj.prop.Add(...)
AjSharpMachine
List, DynamicObject, DinamicClass in AjSharpMachine
ExpressionUtilities.ResolveToList w/tests
ExpressionUtilitiesTests
ArrayExpression with tests
SetArrayCommand with tests
NewArrayExpression with tests
AjSharpMachineTests
InitializeNewArrayExpression with tests
array support in Parser (new, access, setting)
SumArray.ajs in tests
ExpressionUtilities.ResolveToDictionary with tests
Non numeric subindices in array processing (using IDictionary)