@@ -53,6 +53,7 @@
     <Compile Include="PredicatesTests.cs" />
     <Compile Include="PrimitivesTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringUtilitiesTests.cs" />
     <Compile Include="TypeUtilitiesTests.cs" />
   </ItemGroup>
   <ItemGroup>
